// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<clustered-bar-chart> rendered-html annotations should pass annotation prop 1`] = `
<g aria-hidden="true" class="vcl-annotation-group" data-testid="annotation-group" focusable="false" role="presentation">
  <g class="annotations">
    <g class="annotation">
      <g class="annotation-connector"></g>
      <g class="annotation-subject"></g>
      <g class="annotation-note">
        <g class="annotation-note-content">
          <rect class="annotation-note-bg"></rect>
          <text class="annotation-note-label"></text>
          <text class="annotation-note-title" fill="grey" font-weight="bold">
            <tspan dy="0.8em" x="0">
              Temporary
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g class="annotation"></g>
    <g class="annotation"></g>
  </g>
</g>
`;

exports[`<clustered-bar-chart> rendered-html generic test suite accessibility: should not print accessibility console warnings and logs when accessibility.disableValidation set to true 1`] = `Array []`;

exports[`<clustered-bar-chart> rendered-html generic test suite accessibility: should not print accessibility console warnings and logs when accessibility.disableValidation set to true 2`] = `Array []`;

exports[`<clustered-bar-chart> rendered-html generic test suite accessibility: should not print accessibility console warnings and logs when accessibility.disableValidation set to true 3`] = `Array []`;

exports[`<clustered-bar-chart> rendered-html generic test suite accessibility: should print accessibility console warnings and logs when accessibility.disableValidation defaults to false 1`] = `
Array [
  Array [
    "%c longDescription: Either accessibility.longDescription or accessibility.contextExplanation is required",
    "color: #C6003F;font-size:medium;",
  ],
  Array [
    "%c executiveSummary: Either accessibility.purpose or accessibility.executiveSummary is required",
    "color: #C6003F;font-size:medium;",
  ],
  Array [
    "%c elementsAreInterface: accessibility.elementsAreInterface needs a boolean value either true or false",
    "color: #C6003F;font-size:medium;",
  ],
]
`;

exports[`<clustered-bar-chart> rendered-html generic test suite accessibility: should print accessibility console warnings and logs when accessibility.disableValidation defaults to false 2`] = `
Array [
  Array [
    "%c longDescription: Either accessibility.longDescription or accessibility.contextExplanation should have minimum 40 characters and a combined length between 40 and 500 characters",
    "font-size:medium;",
  ],
  Array [
    "%c executiveSummary: Either accessibility.purpose or accessibility.executiveSummary should have minimum 40 characters and a combined length between 40 and 250 characters",
    "font-size:medium;",
  ],
  Array [
    "%c statisticalNotes: accessibility.statisticalNotes should have length between 40 and 250 characters",
    "font-size:medium;",
  ],
  Array [
    "%c structureNotes: accessibility.structureNotes should have length between 40 and 250 characters",
    "font-size:medium;",
  ],
]
`;

exports[`<clustered-bar-chart> rendered-html generic test suite accessibility: should print accessibility console warnings and logs when accessibility.disableValidation defaults to false 3`] = `
Array [
  Array [
    "%c clustered-bar-test has accessibility warnings and other messages",
    "color: #C6003F;font-size:medium;",
  ],
]
`;

exports[`<clustered-bar-chart> rendered-html reference line should pass referenceLines prop 1`] = `
<g aria-hidden="true" class="clustered-bar-reference-line-group" data-testid="reference-line-group" focusable="false" role="presentation">
  <g class="clustered-bar-reference" opacity="1" transform="translate(0,34.39999999999999)">
    <line class="clustered-bar-reference-line" opacity="0" x1="0" x2="567" y1="0" y2="0"></line>
    <text class="clustered-bar-reference-line-label" dx="-0.1em" dy="0.3em" opacity="0" text-anchor="end" x="0" y="0"></text>
  </g>
</g>
`;

exports[`<clustered-bar-chart> rendered-html reference line should pass referenceStyle prop 1`] = `<line class="clustered-bar-reference-line" opacity="0" x1="0" x2="567" y1="0" y2="0"></line>`;

exports[`<clustered-bar-chart> rendered-html render should render with minimal props[data,oridnalAccessor,groupAccessor,valueAccessor] given 1`] = `
<clustered-bar-chart id="clustered-bar-test">
  <div class="is--vertical light o-layout">
    <div class="vcl-accessibility-instructions" id="chart-instructions-clustered-bar-test" style="position: absolute; width: 675px;">
      <p class="screen-reader-info vcl-region-label" tabindex="0">
        Keyboard interactive clustered-bar-chart, Titled: Clustered Bar Chart Title. The next TAB will focus the chart area. Pressing ENTER once on the chart will enter it and focus the chart's first cluster. If there are multiple clusters, they can be navigated among using ARROW keys. You may access the group's child bars by pressing ENTER again. You may then use the arrow keys to navigate among bars and SPACEBAR to select them. Use ESCAPE to drill up one level of the chart or TAB to leave it entirely. If you are using a screen reader, this section contains additional information and instructions.
      </p>
      <h2 class="screen-reader-info vcl-access-title">
        Chart title: Clustered Bar Chart Title
      </h2>
      <h3 class="screen-reader-info vcl-access-subtitle">
        Chart subtitle: This is the clustered bar chart's subtitle
      </h3>
      <p class="screen-reader-info vcl-access-executive-summary" data-level="h3"></p>
      <p class="screen-reader-info vcl-access-purpose" data-level="h3"></p>
      <p class="screen-reader-info vcl-access-long-description" data-level="h3"></p>
      <p class="screen-reader-info vcl-access-context" data-level="h3"></p>
      <h3 class="screen-reader-info vcl-access-structure-heading">
        Structure
      </h3>
      <p class="screen-reader-info vcl-access-statistics" data-level="h4"></p>
      <h4 class="screen-reader-info vcl-access-chart-layout-heading">
        Chart Layout Description
      </h4>
      <p class="screen-reader-info vcl-access-layout">
        This is a clustered-bar-chart with 3 clusters containing a total 9 bars.
      </p>
      <p class="screen-reader-info vcl-access-xAxis">
        The chart has a horizontal X Axis, titled X Axis with a range that starts with 2016 and ends with 2018.
      </p>
      <p class="screen-reader-info vcl-access-yAxis">
        The chart has a vertical Y axis, titled Y Axis with a range that starts with -30 and ends with 40.
      </p>
      <p class="screen-reader-info vcl-access-notes" data-annotationlevel="h3" data-level="h4"></p>
      <h3 class="screen-reader-info vcl-interaction-instructions">
        Interaction Instructions
      </h3>
      <p class="screen-reader-info">
        Use Regions/Landmarks or TAB to skip ahead to the chart area or the data table. The following subsections explain how to use this chart's interactivity.
      </p>
      <h4 class="screen-reader-info">
        Enabling this chart's interactivity
      </h4>
      <p class="screen-reader-info">
        Screen readers that are able to switch between Browse and Forms mode will need to turn on Forms mode once the chart area is reached.
      </p>
      <h4 class="screen-reader-info">
        Using the TAB key outside the Chart area and Exposing new Layers with the ENTER key
      </h4>
      <p class="screen-reader-info">
        Each chart has three main TAB areas at first: the information and instructions (which is this), the chart area, and the data table. You may TAB out of this section to the chart area at any time. Once on the chart area, you may focus the chart's first cluster by pressing ENTER. Doing this will navigate you into the chart area, which enables you to use the ARROW keys focus new elements.
      </p>
      <h4 class="screen-reader-info">
        Using the ESCAPE key
      </h4>
      <p class="screen-reader-info">
        When in the chart area, pressing the ESCAPE key will always move your keyboard focus to the parent of the bar or cluster you are currently on, until you reach the root of the chart.
      </p>
      <h4 class="screen-reader-info">
        Exploring Sibling Groups and Elements with LEFT and RIGHT
      </h4>
      <p class="screen-reader-info">
        When in the chart area, pressing RIGHT ARROW will move your focus to the next available bar or cluster at the same level, within the same group. If there is not another bar or cluster at the same level within your group, focus will move back to the first bar or cluster among the siblings to your bar or cluster. Pressing LEFT ARROW works in the same circular manner, but in reverse. This functionality is intended to allow easier comparison and navigation among siblings at the beginning and end of a group without leaving the group. This can be helpful when elements are sorted or ordered, because you can jump from the first to last elements easily.
      </p>
      <h4 class="screen-reader-info">
        Selecting Elements with SPACEBAR
      </h4>
      <p class="screen-reader-info">
        If a bar is selectable and that selection causes something to happen, it will be marked up as a BUTTON and you may select it using SPACEBAR. Note that if you use SPACEBAR while on a cluster, it will have no effect. Only using SPACEBAR on a bar may have effects.)
      </p>
    </div>
    <div class="o-layout--chart">
      <h2 data-testid="main-title">
        Clustered Bar Chart Title
      </h2>
      <p class="visa-ui-text--instructions" data-testid="sub-title">
        This is the clustered bar chart's subtitle
      </p>
      <div aria-hidden="true" class="clustered-bar-legend vcl-legend" role="presentation" style="display: block;">
        <svg aria-hidden="true" class="vcl-svg" data-testid="legend-container" data-type="bar" focusable="false" height="29" opacity="1" role="presentation" viewBox="0 0 672 29" width="672" style="padding-left: 54px; padding-top: 20px;">
          <g class="legend-padding-wrapper" transform="translate(4,4)">
            <g class="bar legend">
              <rect class="bar-rect" data-base-color="#7c99b1" data-fill="url(#clustered-bar-test_texture_0)" data-stroke="#35495a" data-stroke-width="1" fill="url(#clustered-bar-test_texture_0)" height="20" opacity="1" stroke="#35495a" stroke-dasharray="none" stroke-width="1" width="20" style="fill: url(#clustered-bar-test_texture_0); stroke: #35495a; stroke-width: 1; stroke-dasharray: none;"></rect>
              <text class="bar-text" dx=".2em" dy="16" opacity="1"></text>
            </g>
            <g class="bar legend">
              <rect class="bar-rect" data-base-color="#cacae7" data-fill="url(#clustered-bar-test_texture_1)" data-stroke="#6868ba" data-stroke-width="1" fill="url(#clustered-bar-test_texture_1)" height="20" opacity="1" stroke="#6868ba" stroke-dasharray="none" stroke-width="1" width="20" style="fill: url(#clustered-bar-test_texture_1); stroke: #6868ba; stroke-width: 1; stroke-dasharray: none;"></rect>
              <text class="bar-text" dx=".2em" dy="16" opacity="1"></text>
            </g>
            <g class="bar legend">
              <rect class="bar-rect" data-base-color="#abb798" data-fill="url(#clustered-bar-test_texture_2)" data-stroke="#576245" data-stroke-width="1" fill="url(#clustered-bar-test_texture_2)" height="20" opacity="1" stroke="#576245" stroke-dasharray="none" stroke-width="1" width="20" style="fill: url(#clustered-bar-test_texture_2); stroke: #576245; stroke-width: 1; stroke-dasharray: none;"></rect>
              <text class="bar-text" dx=".2em" dy="16" opacity="1"></text>
            </g>
          </g>
        </svg>
      </div>
      <div class="visa-viz-d3-clustered-bar-container" data-testid="chart-container">
        <div aria-label="Clustered Bar Chart Title. This is the clustered bar chart's subtitle.  Navigate into the chart area by pressing ENTER. ID: clustered-bar-test" class="VCL-controller screen-reader-info" data-group="year" id="chart-area-clustered-bar-test" role="application" tabindex="0">
          Interactive clustered-bar-chart.
        </div>
        <svg class="vcl-svg" data-testid="root-svg" focusable="false" height="250" role="presentation" tabindex="-1" viewBox="0 0 675 250" width="675" style="overflow: hidden;">
          <g data-testid="margin-container" id="visa-viz-margin-container-g-clustered-bar-test">
            <g data-testid="padding-container" id="visa-viz-padding-container-g-clustered-bar-test">
              <g aria-hidden="true" class="grid-group" focusable="false" role="presentation">
                <g class="bottom grid" data-testid="grid-bottom" fill="none" font-family="sans-serif" font-size="10" text-anchor="middle">
                  <path class="domain" stroke="currentColor"></path>
                  <g class="tick" opacity="0.000001" transform="translate(106.31249999999999,0)">
                    <line stroke="currentColor" y2="172"></line>
                    <text dy="0.71em" fill="currentColor" y="175"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(283.5,0)">
                    <line stroke="currentColor" y2="172"></line>
                    <text dy="0.71em" fill="currentColor" y="175"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(460.6875,0)">
                    <line stroke="currentColor" y2="172"></line>
                    <text dy="0.71em" fill="currentColor" y="175"></text>
                  </g>
                </g>
                <g class="grid left" data-testid="grid-left" fill="none" font-family="sans-serif" font-size="10" text-anchor="end">
                  <path class="domain" stroke="currentColor"></path>
                  <g class="tick" opacity="0.000001" transform="translate(0,172.5)">
                    <line stroke="currentColor" x2="567"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,149.56666666666666)">
                    <line stroke="currentColor" x2="567"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,126.63333333333334)">
                    <line stroke="currentColor" x2="567"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,103.7)">
                    <line stroke="currentColor" x2="567"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,80.76666666666667)">
                    <line stroke="currentColor" x2="567"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,57.83333333333334)">
                    <line stroke="currentColor" x2="567"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,34.89999999999999)">
                    <line stroke="currentColor" x2="567"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,11.966666666666665)">
                    <line stroke="currentColor" x2="567"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                </g>
              </g>
              <g class="clustered-bar-group" data-testid="clustered-bar-group">
                <g class="clustered-bar-wrapper entering" data-id="clustered-bar-wrapper-2016" data-testid="clustered-bar-wrapper" focusable="false" id="clustered-bar-test-123457-123457-123457" role="presentation" tabindex="-1" transform="translate(35.43749999999997,0)">
                  <rect class="clustered-bar" cursor="default" data-id="bar-2016-A" data-role="img" data-testid="bar" fill="url(#clustered-bar-test_texture_0)" filter="url(#VCL-filter-35495a-rest-clustered-bar-test)" focusable="false" height="68.8" id="clustered-bar-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35" x="9" y="103.2"></rect>
                  <rect class="clustered-bar" cursor="default" data-id="bar-2016-B" data-role="img" data-testid="bar" fill="url(#clustered-bar-test_texture_1)" filter="url(#VCL-filter-6868ba-rest-clustered-bar-test)" focusable="false" height="11.466666666666683" id="clustered-bar-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35" x="53" y="103.2"></rect>
                  <rect class="clustered-bar" cursor="default" data-id="bar-2016-C" data-role="img" data-testid="bar" fill="url(#clustered-bar-test_texture_2)" filter="url(#VCL-filter-576245-rest-clustered-bar-test)" focusable="false" height="50.45333333333334" id="clustered-bar-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35" x="97" y="52.74666666666666"></rect>
                </g>
                <g class="clustered-bar-wrapper entering" data-id="clustered-bar-wrapper-2017" data-testid="clustered-bar-wrapper" focusable="false" id="clustered-bar-test-123457-123457-123457" role="presentation" tabindex="-1" transform="translate(212.625,0)">
                  <rect class="clustered-bar" cursor="default" data-id="bar-2017-A" data-role="img" data-testid="bar" fill="url(#clustered-bar-test_texture_0)" filter="url(#VCL-filter-35495a-rest-clustered-bar-test)" focusable="false" height="34.400000000000006" id="clustered-bar-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35" x="9" y="68.8"></rect>
                  <rect class="clustered-bar" cursor="default" data-id="bar-2017-B" data-role="img" data-testid="bar" fill="url(#clustered-bar-test_texture_1)" filter="url(#VCL-filter-6868ba-rest-clustered-bar-test)" focusable="false" height="52.74666666666667" id="clustered-bar-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35" x="53" y="50.45333333333333"></rect>
                  <rect class="clustered-bar" cursor="default" data-id="bar-2017-C" data-role="img" data-testid="bar" fill="url(#clustered-bar-test_texture_2)" filter="url(#VCL-filter-576245-rest-clustered-bar-test)" focusable="false" height="103.2" id="clustered-bar-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35" x="97" y="0"></rect>
                </g>
                <g class="clustered-bar-wrapper entering" data-id="clustered-bar-wrapper-2018" data-testid="clustered-bar-wrapper" focusable="false" id="clustered-bar-test-123457-123457-123457" role="presentation" tabindex="-1" transform="translate(389.8125,0)">
                  <rect class="clustered-bar" cursor="default" data-id="bar-2018-A" data-role="img" data-testid="bar" fill="url(#clustered-bar-test_texture_0)" filter="url(#VCL-filter-35495a-rest-clustered-bar-test)" focusable="false" height="59.62666666666667" id="clustered-bar-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35" x="9" y="43.57333333333333"></rect>
                  <rect class="clustered-bar" cursor="default" data-id="bar-2018-B" data-role="img" data-testid="bar" fill="url(#clustered-bar-test_texture_1)" filter="url(#VCL-filter-6868ba-rest-clustered-bar-test)" focusable="false" height="64.21333333333334" id="clustered-bar-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35" x="53" y="38.98666666666667"></rect>
                  <rect class="clustered-bar" cursor="default" data-id="bar-2018-C" data-role="img" data-testid="bar" fill="url(#clustered-bar-test_texture_2)" filter="url(#VCL-filter-576245-rest-clustered-bar-test)" focusable="false" height="71.09333333333333" id="clustered-bar-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35" x="97" y="32.10666666666666"></rect>
                </g>
              </g>
              <g aria-hidden="true" class="clustered-bar-dataLabel-group" data-testid="clustered-bar-dataLabel-group" focusable="false" role="presentation">
                <g class="clustered-bar-dataLabel-vertical clustered-bar-label-wrapper entering" data-id="clustered-bar-dataLabel-wrapper-2016" data-testid="clustered-bar-dataLabel-wrapper" transform="translate(35.43749999999997,0)">
                  <text class="clustered-bar-dataLabel clustered-bar-dataLabel-vertical" cursor="default" data-id="dataLabel-2016-A" data-testid="dataLabel" dy="-.3em" fill="#222222" filter="url(#VCL-t-s-f-ffffffclustered-bar-test)" opacity="1" text-anchor="middle" x="26.578125" y="103.2">
                    -30
                  </text>
                  <text class="clustered-bar-dataLabel clustered-bar-dataLabel-vertical" cursor="default" data-id="dataLabel-2016-B" data-testid="dataLabel" dy="-.3em" fill="#222222" filter="url(#VCL-t-s-f-ffffffclustered-bar-test)" opacity="1" text-anchor="middle" x="26.578125" y="103.2">
                    -5
                  </text>
                  <text class="clustered-bar-dataLabel clustered-bar-dataLabel-vertical" cursor="default" data-id="dataLabel-2016-C" data-testid="dataLabel" dy="-.3em" fill="#222222" filter="url(#VCL-t-s-f-ffffffclustered-bar-test)" opacity="1" text-anchor="middle" x="26.578125" y="52.74666666666666">
                    22
                  </text>
                </g>
                <g class="clustered-bar-dataLabel-vertical clustered-bar-label-wrapper entering" data-id="clustered-bar-dataLabel-wrapper-2017" data-testid="clustered-bar-dataLabel-wrapper" transform="translate(212.625,0)">
                  <text class="clustered-bar-dataLabel clustered-bar-dataLabel-vertical" cursor="default" data-id="dataLabel-2017-A" data-testid="dataLabel" dy="-.3em" fill="#222222" filter="url(#VCL-t-s-f-ffffffclustered-bar-test)" opacity="1" text-anchor="middle" x="70.87500000000001" y="68.8">
                    15
                  </text>
                  <text class="clustered-bar-dataLabel clustered-bar-dataLabel-vertical" cursor="default" data-id="dataLabel-2017-B" data-testid="dataLabel" dy="-.3em" fill="#222222" filter="url(#VCL-t-s-f-ffffffclustered-bar-test)" opacity="1" text-anchor="middle" x="70.87500000000001" y="50.45333333333333">
                    23
                  </text>
                  <text class="clustered-bar-dataLabel clustered-bar-dataLabel-vertical" cursor="default" data-id="dataLabel-2017-C" data-testid="dataLabel" dy="-.3em" fill="#222222" filter="url(#VCL-t-s-f-ffffffclustered-bar-test)" opacity="1" text-anchor="middle" x="70.87500000000001" y="0">
                    45
                  </text>
                </g>
                <g class="clustered-bar-dataLabel-vertical clustered-bar-label-wrapper entering" data-id="clustered-bar-dataLabel-wrapper-2018" data-testid="clustered-bar-dataLabel-wrapper" transform="translate(389.8125,0)">
                  <text class="clustered-bar-dataLabel clustered-bar-dataLabel-vertical" cursor="default" data-id="dataLabel-2018-A" data-testid="dataLabel" dy="-.3em" fill="#222222" filter="url(#VCL-t-s-f-ffffffclustered-bar-test)" opacity="1" text-anchor="middle" x="115.17187500000003" y="43.57333333333333">
                    26
                  </text>
                  <text class="clustered-bar-dataLabel clustered-bar-dataLabel-vertical" cursor="default" data-id="dataLabel-2018-B" data-testid="dataLabel" dy="-.3em" fill="#222222" filter="url(#VCL-t-s-f-ffffffclustered-bar-test)" opacity="1" text-anchor="middle" x="115.17187500000003" y="38.98666666666667">
                    28
                  </text>
                  <text class="clustered-bar-dataLabel clustered-bar-dataLabel-vertical" cursor="default" data-id="dataLabel-2018-C" data-testid="dataLabel" dy="-.3em" fill="#222222" filter="url(#VCL-t-s-f-ffffffclustered-bar-test)" opacity="1" text-anchor="middle" x="115.17187500000003" y="32.10666666666666">
                    31
                  </text>
                </g>
              </g>
              <g aria-hidden="true" class="clustered-bar-reference-line-group" data-testid="reference-line-group" focusable="false" role="presentation"></g>
              <g aria-hidden="true" class="vcl-annotation-group" data-testid="annotation-group" focusable="false" role="presentation"></g>
              <g aria-hidden="true" class="editable vcl-annotation-group" data-testid="editable-annotation-group" focusable="false" role="presentation"></g>
              <g aria-hidden="true" class="axis bottom x" data-testid="x-axis" fill="none" focusable="false" font-family="sans-serif" font-size="10" role="presentation" text-anchor="middle">
                <path class="domain" stroke="currentColor"></path>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(106.31249999999999,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(283.5,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2017
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(460.6875,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2018
                    </tspan>
                  </text>
                </g>
              </g>
              <text aria-hidden="true" class="axis-label bottom x" data-testid="x-axis-label" focusable="false" role="presentation" transform="translate(0, 0)">
                X Axis
              </text>
              <g aria-hidden="true" class="axis left y" data-testid="y-axis" fill="none" focusable="false" font-family="sans-serif" font-size="10" role="presentation" text-anchor="end">
                <path class="domain" stroke="currentColor"></path>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,172.5)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      -30
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,149.56666666666666)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      -20
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,126.63333333333334)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      -10
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,103.7)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      0
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,80.76666666666667)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      10
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,57.83333333333334)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      20
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,34.89999999999999)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      30
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,11.966666666666665)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      40
                    </tspan>
                  </text>
                </g>
              </g>
              <text aria-hidden="true" class="axis-label left y" data-testid="y-axis-label" focusable="false" role="presentation" transform="rotate(-90)">
                Y Axis
              </text>
              <g aria-hidden="true" class="axis-mark axis-mark-x" data-testid="x-axis-mark" fill="none" focusable="false" font-family="sans-serif" font-size="10" role="presentation" text-anchor="middle">
                <path class="domain" stroke="currentColor"></path>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(106.31249999999999,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(283.5,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(460.6875,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
              </g>
              <g aria-hidden="true" class="axis-mark axis-mark-y" data-testid="y-axis-mark" fill="none" focusable="false" font-family="sans-serif" font-size="10" role="presentation" text-anchor="end">
                <path class="domain" stroke="currentColor"></path>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,172.5)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,149.56666666666666)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,126.63333333333334)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,103.7)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,80.76666666666667)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,57.83333333333334)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,34.89999999999999)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,11.966666666666665)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                </g>
              </g>
            </g>
          </g>
          <defs data-testid="pattern-defs">
            <filter class="vcl-inversion-filter" color-interpolation-filters="sRGB" id="inversion-clustered-bar-test">
              <feColorMatrix in="SourceGraphic" type="matrix" values="-1 0 0 0 1 
        0 -1 0 0 1 
        0 0 -1 0 1
        0 0 0 1 0"></feColorMatrix>
              <feColorMatrix type="hueRotate" values="180"></feColorMatrix>
            </filter>
            <pattern class="VCL-texture-pattern" height="12" id="clustered-bar-test_texture_0" patternContentUnits="userSpaceOnUse" patternUnits="userSpaceOnUse" width="12" x="0" y="0">
              <rect class="VCL-t-p-e" fill="#7c99b1" height="12" width="12"></rect>
              <path class="VCL-t-p-e" d="M 0,0 l 12,12 M -3,9 l 6,6 M 9,-3 l 6,6" shape-rendering="auto" stroke="#35495a" stroke-linecap="square" stroke-width="1"></path>
            </pattern>
            <pattern class="VCL-texture-pattern" height="12" id="clustered-bar-test_texture_1" patternContentUnits="userSpaceOnUse" patternUnits="userSpaceOnUse" width="12" x="0" y="0">
              <rect class="VCL-t-p-e" fill="#cacae7" height="12" width="12"></rect>
              <circle class="VCL-t-p-e" cx="6" cy="6" fill="#6868ba" r="1" stroke="#343434" stroke-width="0"></circle>
              <circle class="VCL-t-p-e" cx="0" cy="0" fill="#6868ba" r="1" stroke="#343434" stroke-width="0"></circle>
              <circle class="VCL-t-p-e" cx="0" cy="12" fill="#6868ba" r="1" stroke="#343434" stroke-width="0"></circle>
              <circle class="VCL-t-p-e" cx="12" cy="0" fill="#6868ba" r="1" stroke="#343434" stroke-width="0"></circle>
              <circle class="VCL-t-p-e" cx="12" cy="12" fill="#6868ba" r="1" stroke="#343434" stroke-width="0"></circle>
            </pattern>
            <pattern class="VCL-texture-pattern" height="24" id="clustered-bar-test_texture_2" patternContentUnits="userSpaceOnUse" patternUnits="userSpaceOnUse" width="24" x="0" y="0">
              <rect class="VCL-t-p-e" fill="#abb798" height="24" width="24"></rect>
              <path class="VCL-t-p-e" d="M 0,0 l 24,24 M -6,18 l 12,12 M 18,-6 l 12,12" shape-rendering="auto" stroke="#576245" stroke-linecap="square" stroke-width="1"></path>
              <path class="VCL-t-p-e" d="M 0,24 l 24,-24 M -6,6 l 12,-12 M 18,30 l 12,-12" shape-rendering="auto" stroke="#576245" stroke-linecap="square" stroke-width="1"></path>
            </pattern>
            <filter class="VCL-accessibility-stroke-filter" id="VCL-filter-35495a-rest-clustered-bar-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="outside-morph"></feMorphology>
              <feFlood flood-color="#ffffff" result="outside-color"></feFlood>
              <feComposite in="outside-color" in2="outside-morph" operator="in" result="outside-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="0" result="primary-morph"></feMorphology>
              <feFlood flood-color="#35495a" result="primary-color"></feFlood>
              <feComposite in="primary-color" in2="primary-morph" operator="in" result="primary-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="1" result="clean-morph"></feMorphology>
              <feFlood flood-color="#7c99b1" result="clean-color"></feFlood>
              <feComposite in="clean-color" in2="clean-morph" operator="in" result="clean-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="2" result="morph-erode-2"></feMorphology>
              <feComposite in="SourceGraphic" in2="morph-erode-2" operator="in" result="fill"></feComposite>
              <feMerge>
                <feMergeNode in="outside-stroke"></feMergeNode>
                <feMergeNode in="primary-stroke"></feMergeNode>
                <feMergeNode in="clean-stroke"></feMergeNode>
                <feMergeNode in="fill"></feMergeNode>
              </feMerge>
            </filter>
            <filter class="VCL-accessibility-stroke-filter" id="VCL-filter-7c99b1-hover-clustered-bar-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="outside-morph"></feMorphology>
              <feFlood flood-color="#ffffff" result="outside-color"></feFlood>
              <feComposite in="outside-color" in2="outside-morph" operator="in" result="outside-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="0" result="primary-morph"></feMorphology>
              <feFlood flood-color="#7c99b1" result="primary-color"></feFlood>
              <feComposite in="primary-color" in2="primary-morph" operator="in" result="primary-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="2" result="clean-morph"></feMorphology>
              <feFlood flood-color="#7c99b1" result="clean-color"></feFlood>
              <feComposite in="clean-color" in2="clean-morph" operator="in" result="clean-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="3" result="morph-erode-3"></feMorphology>
              <feComposite in="SourceGraphic" in2="morph-erode-3" operator="in" result="fill"></feComposite>
              <feMerge>
                <feMergeNode in="outside-stroke"></feMergeNode>
                <feMergeNode in="primary-stroke"></feMergeNode>
                <feMergeNode in="clean-stroke"></feMergeNode>
                <feMergeNode in="fill"></feMergeNode>
              </feMerge>
            </filter>
            <filter class="VCL-accessibility-stroke-filter" id="VCL-filter-35495a-click-clustered-bar-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="outside-morph"></feMorphology>
              <feFlood flood-color="#ffffff" result="outside-color"></feFlood>
              <feComposite in="outside-color" in2="outside-morph" operator="in" result="outside-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="0" result="primary-morph"></feMorphology>
              <feFlood flood-color="#35495a" result="primary-color"></feFlood>
              <feComposite in="primary-color" in2="primary-morph" operator="in" result="primary-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="2" result="clean-morph"></feMorphology>
              <feFlood flood-color="#7c99b1" result="clean-color"></feFlood>
              <feComposite in="clean-color" in2="clean-morph" operator="in" result="clean-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="3" result="morph-erode-3"></feMorphology>
              <feComposite in="SourceGraphic" in2="morph-erode-3" operator="in" result="fill"></feComposite>
              <feMerge>
                <feMergeNode in="outside-stroke"></feMergeNode>
                <feMergeNode in="primary-stroke"></feMergeNode>
                <feMergeNode in="clean-stroke"></feMergeNode>
                <feMergeNode in="fill"></feMergeNode>
              </feMerge>
            </filter>
            <filter class="VCL-accessibility-stroke-filter" id="VCL-filter-6868ba-rest-clustered-bar-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="outside-morph"></feMorphology>
              <feFlood flood-color="#ffffff" result="outside-color"></feFlood>
              <feComposite in="outside-color" in2="outside-morph" operator="in" result="outside-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="0" result="primary-morph"></feMorphology>
              <feFlood flood-color="#6868ba" result="primary-color"></feFlood>
              <feComposite in="primary-color" in2="primary-morph" operator="in" result="primary-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="1" result="clean-morph"></feMorphology>
              <feFlood flood-color="#cacae7" result="clean-color"></feFlood>
              <feComposite in="clean-color" in2="clean-morph" operator="in" result="clean-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="2" result="morph-erode-2"></feMorphology>
              <feComposite in="SourceGraphic" in2="morph-erode-2" operator="in" result="fill"></feComposite>
              <feMerge>
                <feMergeNode in="outside-stroke"></feMergeNode>
                <feMergeNode in="primary-stroke"></feMergeNode>
                <feMergeNode in="clean-stroke"></feMergeNode>
                <feMergeNode in="fill"></feMergeNode>
              </feMerge>
            </filter>
            <filter class="VCL-accessibility-stroke-filter" id="VCL-filter-cacae7-hover-clustered-bar-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="outside-morph"></feMorphology>
              <feFlood flood-color="#ffffff" result="outside-color"></feFlood>
              <feComposite in="outside-color" in2="outside-morph" operator="in" result="outside-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="0" result="primary-morph"></feMorphology>
              <feFlood flood-color="#cacae7" result="primary-color"></feFlood>
              <feComposite in="primary-color" in2="primary-morph" operator="in" result="primary-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="2" result="clean-morph"></feMorphology>
              <feFlood flood-color="#cacae7" result="clean-color"></feFlood>
              <feComposite in="clean-color" in2="clean-morph" operator="in" result="clean-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="3" result="morph-erode-3"></feMorphology>
              <feComposite in="SourceGraphic" in2="morph-erode-3" operator="in" result="fill"></feComposite>
              <feMerge>
                <feMergeNode in="outside-stroke"></feMergeNode>
                <feMergeNode in="primary-stroke"></feMergeNode>
                <feMergeNode in="clean-stroke"></feMergeNode>
                <feMergeNode in="fill"></feMergeNode>
              </feMerge>
            </filter>
            <filter class="VCL-accessibility-stroke-filter" id="VCL-filter-6868ba-click-clustered-bar-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="outside-morph"></feMorphology>
              <feFlood flood-color="#ffffff" result="outside-color"></feFlood>
              <feComposite in="outside-color" in2="outside-morph" operator="in" result="outside-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="0" result="primary-morph"></feMorphology>
              <feFlood flood-color="#6868ba" result="primary-color"></feFlood>
              <feComposite in="primary-color" in2="primary-morph" operator="in" result="primary-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="2" result="clean-morph"></feMorphology>
              <feFlood flood-color="#cacae7" result="clean-color"></feFlood>
              <feComposite in="clean-color" in2="clean-morph" operator="in" result="clean-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="3" result="morph-erode-3"></feMorphology>
              <feComposite in="SourceGraphic" in2="morph-erode-3" operator="in" result="fill"></feComposite>
              <feMerge>
                <feMergeNode in="outside-stroke"></feMergeNode>
                <feMergeNode in="primary-stroke"></feMergeNode>
                <feMergeNode in="clean-stroke"></feMergeNode>
                <feMergeNode in="fill"></feMergeNode>
              </feMerge>
            </filter>
            <filter class="VCL-accessibility-stroke-filter" id="VCL-filter-576245-rest-clustered-bar-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="outside-morph"></feMorphology>
              <feFlood flood-color="#ffffff" result="outside-color"></feFlood>
              <feComposite in="outside-color" in2="outside-morph" operator="in" result="outside-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="0" result="primary-morph"></feMorphology>
              <feFlood flood-color="#576245" result="primary-color"></feFlood>
              <feComposite in="primary-color" in2="primary-morph" operator="in" result="primary-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="1" result="clean-morph"></feMorphology>
              <feFlood flood-color="#abb798" result="clean-color"></feFlood>
              <feComposite in="clean-color" in2="clean-morph" operator="in" result="clean-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="2" result="morph-erode-2"></feMorphology>
              <feComposite in="SourceGraphic" in2="morph-erode-2" operator="in" result="fill"></feComposite>
              <feMerge>
                <feMergeNode in="outside-stroke"></feMergeNode>
                <feMergeNode in="primary-stroke"></feMergeNode>
                <feMergeNode in="clean-stroke"></feMergeNode>
                <feMergeNode in="fill"></feMergeNode>
              </feMerge>
            </filter>
            <filter class="VCL-accessibility-stroke-filter" id="VCL-filter-abb798-hover-clustered-bar-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="outside-morph"></feMorphology>
              <feFlood flood-color="#ffffff" result="outside-color"></feFlood>
              <feComposite in="outside-color" in2="outside-morph" operator="in" result="outside-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="0" result="primary-morph"></feMorphology>
              <feFlood flood-color="#abb798" result="primary-color"></feFlood>
              <feComposite in="primary-color" in2="primary-morph" operator="in" result="primary-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="2" result="clean-morph"></feMorphology>
              <feFlood flood-color="#abb798" result="clean-color"></feFlood>
              <feComposite in="clean-color" in2="clean-morph" operator="in" result="clean-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="3" result="morph-erode-3"></feMorphology>
              <feComposite in="SourceGraphic" in2="morph-erode-3" operator="in" result="fill"></feComposite>
              <feMerge>
                <feMergeNode in="outside-stroke"></feMergeNode>
                <feMergeNode in="primary-stroke"></feMergeNode>
                <feMergeNode in="clean-stroke"></feMergeNode>
                <feMergeNode in="fill"></feMergeNode>
              </feMerge>
            </filter>
            <filter class="VCL-accessibility-stroke-filter" id="VCL-filter-576245-click-clustered-bar-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="outside-morph"></feMorphology>
              <feFlood flood-color="#ffffff" result="outside-color"></feFlood>
              <feComposite in="outside-color" in2="outside-morph" operator="in" result="outside-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="0" result="primary-morph"></feMorphology>
              <feFlood flood-color="#576245" result="primary-color"></feFlood>
              <feComposite in="primary-color" in2="primary-morph" operator="in" result="primary-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="2" result="clean-morph"></feMorphology>
              <feFlood flood-color="#abb798" result="clean-color"></feFlood>
              <feComposite in="clean-color" in2="clean-morph" operator="in" result="clean-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="3" result="morph-erode-3"></feMorphology>
              <feComposite in="SourceGraphic" in2="morph-erode-3" operator="in" result="fill"></feComposite>
              <feMerge>
                <feMergeNode in="outside-stroke"></feMergeNode>
                <feMergeNode in="primary-stroke"></feMergeNode>
                <feMergeNode in="clean-stroke"></feMergeNode>
                <feMergeNode in="fill"></feMergeNode>
              </feMerge>
            </filter>
            <filter class="VCL-t-s-f-ffffff" id="VCL-t-s-f-ffffffclustered-bar-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1.5" result="dilatedText"></feMorphology>
              <feFlood flood-color="#ffffff" flood-opacity="1" result="whiteTextFlood"></feFlood>
              <feComposite in="whiteTextFlood" in2="dilatedText" operator="in" result="textOutline"></feComposite>
              <feMerge>
                <feMergeNode in="textOutline"></feMergeNode>
                <feMergeNode in="textOutline"></feMergeNode>
                <feMergeNode in="textOutline"></feMergeNode>
                <feMergeNode in="SourceGraphic"></feMergeNode>
              </feMerge>
            </filter>
          </defs>
        </svg>
      </div>
      <div class="clustered-bar-tooltip vcl-tooltip" data-testid="tooltip-container" style="display: block; position: absolute; padding: 0.5rem; opacity: 0; background-color: #ffffff; font-size: 14px; font-weight: 400; color: #222222; border: 1px solid #565656; border-radius: 3px; pointer-events: none; min-width: 80px; max-width: 300px;">
        <p style="margin: 0;"></p>
      </div>
      <data-table iscompact="" uniqueid="clustered-bar-test"></data-table>
    </div>
  </div>
</clustered-bar-chart>
`;
